# Activity

./: .gitignore  PRIVACY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/scripts/: album_art.rs  config.rs  discord_rpc.rs  iconify.rs  media_session.rs  mod.rs  poller.rs  startup.rs  steamgriddb.rs  system_tray.rs  updater.rs  window_detect.rs
src/components/: AppConfigForm.tsx  IconPicker.tsx  SetupWizard.tsx  StatusIndicator.tsx  Titlebar.tsx
src/i18n/: index.ts
src/i18n/locales/: bg.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es-419.json  es-ES.json  fi.json  fr.json  hi.json  hr.json  hu.json  id.json  it.json  ja.json  ko.json  lt.json  nl.json  no.json  pl.json  pt-BR.json  ro.json  ru.json  sv-SE.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
src/lib/: commands.ts  theme.tsx
src/pages/: AppConfigs.tsx  Dashboard.tsx  Settings.tsx
updater/src/: index.html
updater/src-tauri/: Cargo.toml  tauri.conf.json
updater/src-tauri/src/: lib.rs  main.rs
