[package]
name = "activity"
version = "0.2.0"
description = "Activity - Discord Rich Presence, automated"
edition = "2021"

[lib]
name = "activity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
discord-rich-presence = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
    "Storage_Streams",
] }
auto-launch = "0.5"
winreg = "0.55"
